	  Old behavior can be restored with '--ar-does-not-support-at-arguments'
	  argument to 'configure' or 'install'. (#4596)
	* Added '.Lens' modules, with optics for package description data
	  types. (#4701)
	* Support for GHC's numeric -g debug levels (#4673).
	* Added elif-conditionals to .cabal syntax (#4750).
	* Support for building with Win32 version 2.6 (#4835).
	* TODO


2.0.1.0 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> October 2017
	* Support for GHC's numeric -g debug levels (#4673).
	* Added a new 'Distribution.Verbosity.modifyVerbosity' combinator
	(#4724).
	* Added a new 'cabal check' warning about unused, undeclared or
	non-Unicode flags.  Also, it warns about leading dash, which is
	unusable but accepted if it's unused in conditionals. (#4687)
	* Modify `allBuildInfo` to include foreign library info (#4763).
	* Documentation fixes.

2.0.0.2 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> July 2017
	* See http://coldwa.st/e/blog/2017-09-09-Cabal-2-0.html
	for more detailed release notes.
	* The 2.0 migration guide gives advice on adapting Custom setup
	  scripts to backwards-incompatible changes in this release:
	  https://github.com/haskell/cabal/wiki/2.0-migration-guide
	* Add CURRENT_PACKAGE_VERSION to cabal_macros.h (#4319)
	* Dropped support for versions of GHC earlier than 6.12 (#3111).
	* GHC compatibility window for the Cabal library has been extended
	  to five years (#3838).
	* Convenience/internal libraries are now supported (#269).
	  An internal library is declared using the stanza "library
	  'libname'".  Packages which use internal libraries can
	  result in multiple registrations; thus '--gen-pkg-config'
	  can now output a directory of registration scripts rather than
	  a single file.
	* Backwards incompatible change to preprocessor interface:
	  the function in 'PPSuffixHandler' now takes an additional
	  'ComponentLocalBuildInfo' specifying the build information
	  of the component being preprocessed.